Fix search ordering